<resources>
    <string name="app_name">GoodWin</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_enter">Вход</string>
    <string name="logout">Выход</string>
    <string name="refresh">Обновить</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Вход</string>
    <string name="empty">Пусто</string>
    <string name="registration">Регистрация</string>
    <string name="personalNumber">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Вход</string>
    <string name="cancel">Отмена</string>
    <string name="send">Отправить</string>
    <string name="rank">Звание</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="middlename">Отчество</string>
    <string name="nickname">Прозвище</string>
    <string name="email">E-mail</string>
    <string name="birthDate">Дата рождения</string>
    <string name="nation">Национальность</string>
    <string name="unit">Воинская часть</string>
    <string name="grad">Образование</string>
    <string name="subdivision">Подразделение</string>
    <string name="position">Должность</string>
    <string name="battery">Батарея</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="photo">Аватар</string>
    <string name="title_activity_tabbed_activity_example">TabbedActivityExample</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test_navigation_drawer">TestNavigationDrawer</string>
    <string name="no_data">Нет данных</string>
    <string name="all_fields_required">Необходимо заполнить все поля</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_private_office">Личный кабинет</string>
    <string name="additional_info">Дополнительно</string>
    <string name="inventory">Вещевой мешок</string>
    <string name="allowance">Довольствие</string>

    <string name="starshinaIndustries">GoodWin</string>
    <string name="privateOffice">Личный кабинет</string>
    <string name="duty">Суточное дежурство</string>
    <string name="coy">Дом</string>
    <string name="division">Лес</string>
    <string name="oxpaha">Охрана</string>

    <string name="server_connection_error">Ошибка при подключении к серверу. Повторите попытку позднее</string>
    <string name="server_login_error">Ошибка при попытке авторизации. Проверьте правильность введенных данных</string>
    <string name="server_register_error">Ошибка при попытке регистрации. Такой пользователь уже существует</string>
    <string name="server_permission_error">К сожалению, у вас нет прав для просмотра контента</string>

    <string name="unduty_free_users">Свободные агенты</string>
    <string name="user_personal_office">Личный кабинет пользователя</string>
    <string name="delete_from_duty">Удалить из суточного дежурства</string>

    <string name="linen_extradition">Выдача вещевого имущества</string>
    <string name="linen_type_return">Сдано</string>
    <string name="linen_type_receipt">Получено</string>
    <string name="balance">Остаток</string>
    <string name="linen_input_error">Введенные данные превышают текущий остаток</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_duty">Суточное дежурство</string>
    <string name="title_activity_duty_v2">DutyV2Activity</string>
    <string name="title_activity_staff">StaffActivity</string>
    <string name="title_activity_comrades">Товарищи</string>
    <string name="title_activity_linen">Белье</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_chat">Чат</string>

    <string name="change_image">Изменить изображение</string>
    <string name="confirm">Подтвердить</string>
    <string name="short_selected_area">Выбранная область слишком мала. Пожалуйста, повторите</string>

    <string-array name="ranks">
        <item>Рядовой</item>
        <item>Ефрейтор</item>
        <item>Младший сержант</item>
        <item>Сержант</item>
        <item>Старший сержант</item>
        <item>Прапорщик</item>
        <item>Старший прапорщик</item>
        <item>Лейтенант</item>
        <item>Старший лейтенант</item>
        <item>Капитан</item>
        <item>Майор</item>
        <item>Подполковник</item>
        <item>Полковник</item>
    </string-array>

    <string-array name="subdivisions">
        <item>1 подразделение</item>
        <item>2 подразделение</item>
        <item>3 подразделение</item>
        <item>Командное подразделение</item>
        <item>ПАНЦИРЬ</item>
        <item>Сводное подразделение</item>
    </string-array>
    <string name="title_activity_dialog_users">Список пользователей</string>
    <string name="title_activity_error">Ошибка</string>
    <string name="title_activity_inventory">Инвентарь</string>
    <string name="item_view">Просмотр вещи</string>
    <string name="who_equip">Кто выдал</string>
    <string name="equip_date">Дата выдачи</string>
    <string name="your_inventory">Ваш инвентарь</string>

</resources>
