<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/privateOfficeEditingUserInformationLayout"
    android:background="#ffffff"
    android:visibility="gone">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/privateOfficeEditingUserScroll"
        android:fillViewport="false" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserRank"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/rank"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserEmail"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserBirthDate"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/birthDate"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserNation"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/nation"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserGrad"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/grad"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserUnit"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/unit"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserSubdivision"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/subdivision"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserPosition"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/position"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserBattery"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/battery"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/privateOfficeEditingUserPhoneNumber"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/phoneNumber"
                android:inputType="phone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>